--- a/index.html
+++ b/index.html
@@ -192,6 +192,29 @@
 		</div>
 	</div>
 </section>
+<div class="section-name orange" align="center" id="sn-rec"><div class="section-selfname">РЕКОМЕНДАЦИИ</div></div>
+<section id="recomendations" class="rec-container">
+	<div class="rec-block">
+		<div class="socionics">
+			
+			<div class="soc-ego-block">
+				<div class="soc-type">
+				<div class="type">
+					<div class="soc-line-name orange">
+				
+					<div class="soc-line-selfname"><span data-tooltip="I’m the tooltip text."><img src="icons/question.png"> </span>Соционический тип: <span id="soc-type">ЛСЭ "Штирлиц"</span></div></div>
+				</div>
+			</div>
+				<div class="soc-ego-img"><img src="img/ego-block.png"></div>
+				<div class="soc-ego-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis.</div>
+			</div>
+			<div class="soc-kid-block">
+				<div class="soc-ego-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis.</div>
+				<div class="soc-ego-img"><img src="img/kid-block.png"></div>
+			</div>
+		</div>
+	</div>
+</section>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="vertical-timeline/js/main.js"></script> <!-- Resource jQuery -->
 </body>
