Finished psyhotypes block

--- a/index.html
+++ b/index.html
@@ -196,21 +196,57 @@
 <section id="recomendations" class="rec-container">
 	<div class="rec-block">
 		<div class="socionics">
+			<div class="type">
+					<div class="psy-line-name orange">
+					<div class="psy-line-selfname"><span data-tooltip="Соционический тип - это тип информационного метаболизма, который определяется функционированием психических функций человека, обрабатывающих информацию. Соционика рассматривает 16 типов информационного метаболизма, или социотипов."><img src="icons/question.png"> </span>Соционический тип: <span id="soc-type">ЛСЭ "Штирлиц"</span></div></div>
+				</div>
 			
 			<div class="soc-ego-block">
-				<div class="soc-type">
-				<div class="type">
-					<div class="soc-line-name orange">
 				
-					<div class="soc-line-selfname"><span data-tooltip="I’m the tooltip text."><img src="icons/question.png"> </span>Соционический тип: <span id="soc-type">ЛСЭ "Штирлиц"</span></div></div>
-				</div>
-			</div>
 				<div class="soc-ego-img"><img src="img/ego-block.png"></div>
-				<div class="soc-ego-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis.</div>
+				<div class="soc-ego-text" id="ego-text"></div>
 			</div>
 			<div class="soc-kid-block">
-				<div class="soc-ego-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, obcaecati, quisquam id molestias eaque asperiores voluptatibus cupiditate error assumenda delectus odit similique earum voluptatem doloremque dolorem ipsam quae rerum quis.</div>
+				<div class="soc-ego-text" id="kid-text"></div>
 				<div class="soc-ego-img"><img src="img/kid-block.png"></div>
+			</div>
+			
+		</div>
+		<div class="psyhosophy">
+				<div class="type">
+						<div class="psy-line-name orange">
+						<div class="psy-line-selfname"><span data-tooltip="ПЙ-тип - это"><img src="icons/question.png"> </span>ПЙ-тип: <span id="soc-type">ФВЭЛ "Чехов"</span></div></div>
+				</div>
+			<div class="ps-block" >
+				
+			<div class="func">
+				<div class="ps-circle bor-orange" id="one-circle">1Ф</div>
+				<div class="ps-square bor-orange">
+					<div class="ps-header orange">"МОЛОТ", <br>избыток</div>
+					<div class="ps-text"><span id ="one-content">Описание избыточно сильных аспектов с позиции 1Ф</span></div>
+				</div>
+			</div>
+			<div class="func">
+				<div class="ps-circle bor-yellow" id="one-circle">2В</div>
+				<div class="ps-square bor-yellow">
+					<div class="ps-header yellow">"РЕКА", <br>норма</div>
+					<div class="ps-text"><span id ="two-content">Описание избыточно сильных аспектов с позиции 1Ф</span></div>
+				</div>
+			</div>
+			<div class="func">
+				<div class="ps-circle bor-blue" id="one-circle">3Э</div>
+				<div class="ps-square bor-blue">
+					<div class="ps-header blue">"ЯЗВА", <br>изъян</div>
+					<div class="ps-text"><span id ="three-content">Описание избыточно сильных аспектов с позиции 1Ф</span></div>
+				</div>
+			</div>
+			<div class="func">
+				<div class="ps-circle bor-gray" id="one-circle">4Л</div>
+				<div class="ps-square bor-gray">
+					<div class="ps-header gray">"ПУСТЯК", безразличие</div>
+					<div class="ps-text"><span id ="four-content">Описание избыточно сильных аспектов с позиции 1Ф</span></div>
+				</div>
+			</div>
 			</div>
 		</div>
 	</div>
