First steps in Output of Infographics

--- a/application-start.html
+++ b/application-start.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <script type="text/javascript" src="web/pwc/pwc.nocache.js" source-path="app" entry-point="start"></script>
+        <div id ="Main" style="width:100%; height:100%;"/>
     </body>
 </html>
