Finished FrontEnd part

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@
 //     </script>
 
   	
-	<title>Responsive Vertical Timeline</title>
+	<title>TEAMap</title>
 </head>
 <body>
-	<!-- <header>
-		<h1>Responsive Vertical Timeline</h1>
-	</header>
+
  -->
  <section id="main" class="main-container">
 		<div class="main-block" id="sn-main">
@@ -218,7 +216,7 @@
 		<div class="psyhosophy">
 				<div class="headtext">
 						<div class="psy-line-name orange">
-						<div class="psy-line-selfname"><span data-tooltip="ПЙ-тип - это"><img src="icons/question.png"> </span>ПЙ-тип: <span id="soc-type">ФВЭЛ "Чехов"</span></div></div>
+						<div class="psy-line-selfname"><span data-tooltip="ПЙ-тип - это тип психософии, основанный на сфере приоритетов человека, его собственных представлениях о своем внутреннем мире и своих возможностях."><img src="icons/question.png"> </span>ПЙ-тип: <span id="soc-type">ФВЭЛ "Чехов"</span></div></div>
 				</div>
 			<div class="ps-block" >
 				
