--- a/application-start.html
+++ b/application-start.html
@@ -6,6 +6,24 @@
         <link rel="stylesheet" type="text/css" href="web/pwc/reset.css" />
         <link rel="stylesheet" type="text/css" href="web/pwc/theme.css" />
         <link rel="stylesheet" type="text/css" href="web/pwc/flaticon.css" />
+
+
+        <link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
+        <link rel="stylesheet" href="InfoGraphicsEmpForm/vertical-timeline/css/reset.css"> <!-- CSS reset -->
+        <link rel="stylesheet" href="InfoGraphicsEmpForm/vertical-timeline/css/style.css"> <!-- Resource style -->
+        <link rel="stylesheet" href="InfoGraphicsEmpForm/progress-bars/css/style.css">
+        <script src="InfoGraphicsEmpForm/vertical-timeline/js/modernizr.js"></script> <!-- Modernizr -->
+        <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+        <link href="InfoGraphicsEmpForm/jquery-plugin-circliful/css/circliful.css" rel="stylesheet" type="text/css" />
+        <script src="InfoGraphicsEmpForm/jquery-plugin-circliful/js/circliful.min.js"></script>
+        <script src="InfoGraphicsEmpForm/vertical-timeline/js/data.js"></script> 
+
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+        <script src="InfoGraphicsEmpForm/vertical-timeline/js/main.js"></script> <!-- Resource jQuery -->
+        <script src="InfoGraphicsEmpForm/jquery-plugin-circliful/js/circliful.js"></script>
+
     </head>
     <body>
         <script type="text/javascript" src="web/pwc/pwc.nocache.js" source-path="app" entry-point="start"></script>
