Changes in temp infographics form

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 
  <section id="main" class="main-container">
-		<div class="main-block" id="sn-main">
+		<div class="emp-main-block" id="sn-main">
 			<div class="photo">
  				 <img src="InfoGraphicsEmpForm/img/photoRan.jpg" alt="" />
 			</div>
